add multi languages in Reset Password, Forgot Password and Device OTP on Login

--- a/src/app/pages/forgot-password/forgot-password.component.html
+++ b/src/app/pages/forgot-password/forgot-password.component.html
@@ -7,24 +7,27 @@
     <div class="lgn-box">
       <div class="top">
         <img [src]="environment?.image" [srcset]="environment?.image_2x" />
-        <div class="title">Lupa Kata Sandi</div>
+        <div class="title">{{ ls.locale.forgot_password.text1 }}</div>
       </div>
       <div class="middle-form">
         <form name="form" [formGroup]="forgotPasswordForm">
           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput placeholder="Email" formControlName="email" type="email">
-              <mat-error *ngIf="forgotPasswordForm.controls['email'].hasError('required') && forgotPasswordForm.controls['email'].touched">
-                Email harus diisi
+              <input matInput [placeholder]="ls.locale.global.label.email" formControlName="email" type="email">
+              <mat-error
+                *ngIf="forgotPasswordForm.controls['email'].hasError('required') && forgotPasswordForm.controls['email'].touched">
+                {{ ls.locale.forgot_password.text4 }}
               </mat-error>
             </mat-form-field>
           </div>
           <div class="login-button" fxLayout="row">
-            <button mat-raised-button aria-label="Login" type="button" color="primary-red" (click)="submit()">KIRIM</button>
+            <button mat-raised-button aria-label="Login" type="button" color="primary-red" (click)="submit()">{{
+              ls.locale.global.button.send }}</button>
           </div>
 
           <div fxLayout="row" fxLayoutAlign="center bottom">
-            <p class="backtologin">Kembali ke <a [routerLink]="'/login'">Login</a></p>
+            <p class="backtologin">{{ ls.locale.forgot_password.text2 }} <a
+                [routerLink]="'/login'">{{ls.locale.forgot_password.text3}}</a></p>
           </div>
         </form>
       </div>
