--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -7,20 +7,23 @@
     <div class="lgn-box">
       <div class="top">
         <img [src]="environment?.image" [srcset]="environment?.image_2x" />
-        <div class="title">Atur Ulang Kata Sandi</div>
+        <div class="title">{{ ls.locale.reset_password.text1 }}</div>
       </div>
       <div class="middle-form">
         <form name="form" [formGroup]="forgotPasswordForm">
           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" *ngIf="showPassword" formControlName="password" placeholder="Kata Sandi Baru">
-              <input matInput type="password" *ngIf="!showPassword" formControlName="password" placeholder="Kata Sandi Baru">
+              <input matInput type="text" *ngIf="showPassword" formControlName="password"
+                [placeholder]="ls.locale.reset_password.text2">
+              <input matInput type="password" *ngIf="!showPassword" formControlName="password"
+                [placeholder]="ls.locale.reset_password.text2">
               <button type="button" mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
                 <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
               </button>
-              <mat-error *ngIf="forgotPasswordForm.controls['password'].hasError('required') && forgotPasswordForm.controls['password'].touched">
-                Kata sandi baru harus diisi
+              <mat-error
+                *ngIf="forgotPasswordForm.controls['password'].hasError('required') && forgotPasswordForm.controls['password'].touched">
+                {{ ls.locale.reset_password.text3 }}
               </mat-error>
             </mat-form-field>
           </div>
@@ -28,20 +31,23 @@
           <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto" fxLayoutGap="10px">
             <mat-form-field fxFlex="100" class="is-light form-primary">
               <input matInput type="text" *ngIf="showConfirmPassword" formControlName="password_confirmation"
-                placeholder="Konfirmasi Kata Sandi Baru">
+                [placeholder]="ls.locale.reset_password.text4">
               <input matInput type="password" *ngIf="!showConfirmPassword" formControlName="password_confirmation"
-                placeholder="Konfirmasi Kata Sandi Baru">
-              <button type="button" mat-button matSuffix mat-icon-button (click)="showConfirmPassword = !showConfirmPassword">
+                [placeholder]="ls.locale.reset_password.text4">
+              <button type="button" mat-button matSuffix mat-icon-button
+                (click)="showConfirmPassword = !showConfirmPassword">
                 <mat-icon *ngIf="!showConfirmPassword">remove_red_eye</mat-icon>
                 <mat-icon *ngIf="showConfirmPassword">visibility_off</mat-icon>
               </button>
-              <mat-error *ngIf="forgotPasswordForm.controls['password_confirmation'].hasError('required') && forgotPasswordForm.controls['password_confirmation'].touched">
-                Konfirmasi Kata Sandi Baru harus diisi
+              <mat-error
+                *ngIf="forgotPasswordForm.controls['password_confirmation'].hasError('required') && forgotPasswordForm.controls['password_confirmation'].touched">
+                {{ ls.locale.reset_password.text5 }}
               </mat-error>
             </mat-form-field>
           </div>
           <div class="login-button" fxLayout="row">
-            <button mat-raised-button aria-label="Login" type="button" color="primary-red" (click)="submit()">KIRIM</button>
+            <button mat-raised-button aria-label="Login" type="button" color="primary-red" (click)="submit()">{{
+              ls.locale.global.button.send }}</button>
           </div>
         </form>
       </div>
