--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -416,14 +416,18 @@
         >
           <mat-icon>arrow_downward</mat-icon> Import XLS
         </button>
-        <button
-          mat-raised-button
-          type="button"
-          class="is-danger"
-          (click)="exportAudience()"
-        >
-          <mat-icon>arrow_upward</mat-icon> Export Template
-        </button>
+        <div fxLayout="column">
+          <button
+            mat-raised-button
+            type="button"
+            class="is-danger"
+            (click)="exportAudience()"
+          >
+            <mat-icon>arrow_upward</mat-icon> Export Template
+          </button>
+          <label *ngIf="exportTemplate" style="color: white;">Downloading Template</label>
+        </div>
+        
       </div>
       <mat-progress-bar
         [color]="'primary'"
