--- a/src/app/pages/dte/audience/edit/audience-edit.component.html
+++ b/src/app/pages/dte/audience/edit/audience-edit.component.html
@@ -270,9 +270,12 @@
         <button mat-raised-button type="button" class="is-danger" (click)="importAudience()">
           <mat-icon>arrow_downward</mat-icon> Import XLS
         </button>
-        <button mat-raised-button type="button" class="is-danger" (click)="exportAudience()">
-          <mat-icon>arrow_upward</mat-icon> Export Template
-        </button>
+        <div fxLayout="column">
+          <button mat-raised-button type="button" class="is-danger" (click)="exportAudience()">
+            <mat-icon>arrow_upward</mat-icon> Export Template
+          </button>
+          <label *ngIf="exportTemplate" style="color: white;">Downloading Template</label>
+        </div>
       </div>
       <mat-progress-bar [color]="'primary'" [mode]="'indeterminate'" *ngIf="loadingIndicator"></mat-progress-bar>
       <ngx-datatable class="material" [rows]="rows" [selected]="selected" [columnMode]="'force'" [headerHeight]="48"
