adjusment parameter translate

--- a/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
+++ b/src/app/pages/b2-bvoucher/create/b2-b-voucher-create.component.html
@@ -368,7 +368,7 @@
                     <span class="row-name" (click)="directDetail(row)">{{row.name || '-'}}</span>
                   </ng-template>
                 </ngx-datatable-column>
-                <ngx-datatable-column name="{{ ls.locale.manajamen_barang_sku.manaajemen-koin.text7 }}" prop="code" [sortable]="false">
+                <ngx-datatable-column name="{{ ls.locale.manajemen_barang_sku.manajemen_koin.text7 }}" prop="code" [sortable]="false">
                   <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                     <span class="row-address">{{row.code || '-'}}</span>
                   </ng-template>
