--- a/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
+++ b/src/app/pages/b2-bvoucher/redeem-list/redeem-list.component.html
@@ -88,7 +88,7 @@
       </ng-template>
     </ngx-datatable-column>
 
-    <ngx-datatable-column name="{{ ls.locale.manajemen_barang_sku.manajemen_koin.label }}" prop="code">
+    <ngx-datatable-column name="{{ ls.locale.manajemen_barang_sku.manajemen_koin.text7 }}" prop="code">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
         {{row.code}}
       </ng-template>
@@ -112,7 +112,7 @@
       </ng-template>
     </ngx-datatable-column>
 
-    <ngx-datatable-column name="{{ ls.locale.global.menu.wholasaler }}" prop="wholesaler_name">
+    <ngx-datatable-column name="{{ ls.locale.global.menu.wholesaler }}" prop="wholesaler_name">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">{{row.wholesaler_name }}</ng-template>
     </ngx-datatable-column>
 
