--- a/src/app/pages/remote-call-activation/route-plan/route-plan.component.html
+++ b/src/app/pages/remote-call-activation/route-plan/route-plan.component.html
@@ -43,7 +43,7 @@
                       [noEntriesFoundLabel]="'Tidak ada Position Code yang ditemukan'" [clearSearchInput]="false">
                     </ngx-mat-select-search>
                     <mat-option value="">None</mat-option>
-                    <mat-option value="blank">Belum Di Set</mat-option>
+                    <!-- <mat-option value="blank">Belum Di Set</mat-option> -->
                     <mat-option *ngFor="let item of filteredPosition | async" [value]="item.id">
                       {{item.code}}
                     </mat-option>
@@ -204,7 +204,7 @@
                     [noEntriesFoundLabel]="'Tidak ada Position Code yang ditemukan'" [clearSearchInput]="false">
                   </ngx-mat-select-search>
                   <mat-option>None</mat-option>
-                  <mat-option value="blank">Belum Di Set</mat-option>
+                  <!-- <mat-option value="blank">Belum Di Set</mat-option> -->
                   <mat-option *ngFor="let item of filteredPositionSummary | async" [value]="item.id">
                     {{item.code}}
                   </mat-option>
