change key import preview

--- a/src/app/pages/b2b-voucher-inject/import-panel-dialog/import-panel-dialog.component.html
+++ b/src/app/pages/b2b-voucher-inject/import-panel-dialog/import-panel-dialog.component.html
@@ -63,7 +63,7 @@
               {{ item.type ? item.type : '-' }}
             </td>
             <td nowrap>
-              {{ item.nominal ? item.nominal : '-' }}
+              {{ item.nominal_format_number ? item.nominal_format_number : '-' }}
             </td>
             <td nowrap>
               {{ item.amount ? item.amount : '-' }}
