--- a/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
+++ b/src/app/pages/inapp-marketing/banner/index/banner-index.component.html
@@ -17,7 +17,7 @@
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
-            <input matInput placeholder="ls.locale.global.label.search" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+            <input matInput [placeholder]="ls.locale.global.label.search" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
           </mat-form-field>
         </div>
       </div>
@@ -154,7 +154,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="{{ ls.locale.global.labek.name }}" prop="name">
+        <ngx-datatable-column name="{{ ls.locale.global.label.name }}" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <span class="row-name" (click)="directDetail(row)">{{row.name}}</span>
           </ng-template>
