add new object id

--- a/src/app/pages/device-authentication/device-authentication.component.html
+++ b/src/app/pages/device-authentication/device-authentication.component.html
@@ -16,7 +16,7 @@
         <form name="form" [formGroup]="activationForm">
           <div fxLayout="row wrap" fxLayoutAlign="center center" fxFlex="1 0 auto" fxLayoutGap="10px">
             <mat-form-field fxFlex="50" class="is-light form-primary" appearance="outline" style="text-align: center;">
-              <input matInput type="text" formControlName="code">
+              <input id="input-otp" matInput type="text" formControlName="code">
             </mat-form-field>
           </div>
           <div class="login-button" fxLayout="column">
