--- a/src/app/pages/dte/audience/create/audience-create.component.html
+++ b/src/app/pages/dte/audience/create/audience-create.component.html
@@ -582,6 +582,7 @@
 
     <div class="confirm pt-24 pb-24" fxLayout="row" fxLayoutGap="20px">
       <button
+        id="btn-simpan"
         mat-raised-button
         type="button"
         class="confirmation-button"
