--- a/src/app/pages/dte/pengaturan-attribute-misi/index/list-kategori-toolbox/list-kategori-toolbox.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/list-kategori-toolbox/list-kategori-toolbox.component.html
@@ -19,11 +19,11 @@
       <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
         <mat-icon>search</mat-icon>
         <mat-form-field class="is-light tab-search">
-          <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+          <input id="search" matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
         </mat-form-field>
       </div>
     </div>
-    <ngx-datatable #table class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
+    <ngx-datatable id="table-toolbox" #table class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
       [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [reorderable]="reorderable"
       [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page"
       [offset]="offsetPagination" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
