--- a/src/app/pages/dte/pengaturan-attribute-misi/index/project/project-list.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/project/project-list.component.html
@@ -13,7 +13,7 @@
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
-            <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+            <input id="search" matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
           </mat-form-field>
         </div>
       </div>
