--- a/src/app/pages/sku-management/product/edit/product-edit.component.scss
+++ b/src/app/pages/sku-management/product/edit/product-edit.component.scss
@@ -67,3 +67,17 @@
   color: white;
   padding: 0 24px;
 }
+
+.info-label {
+  font-size: 12px;
+  font-weight: 700;
+  padding: 5px 20px;
+  border-radius: 100px;
+  background: #eee;
+  
+  .mat-icon {
+    font-size: 20px;
+    width: 20px;
+    height: 20px;
+  }
+}
