add object ID to edit & duplicate component

--- a/src/app/pages/dte/mission-builder/duplicate/dialog-misi-duplicate/dialog-misi-duplicate.component.html
+++ b/src/app/pages/dte/mission-builder/duplicate/dialog-misi-duplicate/dialog-misi-duplicate.component.html
@@ -3,13 +3,13 @@
 
   <mat-dialog-content>
     <div class="pt-8 pb-16">
-      <mat-checkbox [formControl]="status_pin_up" name="status_pin_up">Pin Up Misi</mat-checkbox>
+      <mat-checkbox id="pin-up" [formControl]="status_pin_up" name="status_pin_up">Pin Up Misi</mat-checkbox>
     </div>
 
     <mat-form-field style="width: 100%">
-      <mat-select formControlName="task_template_id" placeholder="Pilih Template Misi" id="task_template_id"
+      <mat-select formControlName="task_template_id" placeholder="Pilih Template Misi" id="task_template_id" (click)="selectForm('template')"
         (selectionChange)="selectChangeMisi($event)" #singleSelect>
-        <ngx-mat-select-search [formControl]="filterMission" [placeholderLabel]="'Cari Template Misi...'"
+        <ngx-mat-select-search id="select-search-template" [formControl]="filterMission" [placeholderLabel]="'Cari Template Misi...'"
           [noEntriesFoundLabel]="'Tidak ada Template Misi yang ditemukan'" [clearSearchInput]="false">
         </ngx-mat-select-search>
         <mat-option *ngFor="let item of filteredMission | async" [value]="item.id">
@@ -20,8 +20,8 @@
 
     <mat-form-field style="width: 100%">
       <mat-select formControlName="task_template_other_name_id" placeholder="Pilih Nama Lain Misi"
-        id="task_template_other_name_id" (selectionChange)="selectChangeMisiOtherName($event)" #singleSelect>
-        <ngx-mat-select-search [formControl]="filterMissionOther" [placeholderLabel]="'Cari Nama Lain Misi...'"
+        id="task_template_other_name_id" (click)="selectForm('nama_lain')" (selectionChange)="selectChangeMisiOtherName($event)" #singleSelect>
+        <ngx-mat-select-search id="select-search-nama_lain" [formControl]="filterMissionOther" [placeholderLabel]="'Cari Nama Lain Misi...'"
           [noEntriesFoundLabel]="'Tidak ada Nama Lain Misi yang ditemukan'" [clearSearchInput]="false">
         </ngx-mat-select-search>
         <mat-option *ngFor="let item of filteredMissionOther | async" [value]="item.id">
@@ -31,29 +31,29 @@
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
-      <input matInput formControlName="start_date" placeholder="Tanggal Awal" [matDatepicker]="start_date"
+      <input id="start-date" matInput formControlName="start_date" placeholder="Tanggal Awal" [matDatepicker]="start_date"
         (focus)="start_date.open()" [min]="minDate" [max]="maxDate" readonly />
       <mat-datepicker-toggle matSuffix [for]="start_date"></mat-datepicker-toggle>
       <mat-datepicker #start_date></mat-datepicker>
     </mat-form-field>
 
     <mat-form-field style="width: 100%">
-      <input matInput formControlName="end_date" placeholder="Tanggal Berakhir" [matDatepicker]="end_date"
+      <input id="end-date" matInput formControlName="end_date" placeholder="Tanggal Berakhir" [matDatepicker]="end_date"
         (focus)="end_date.open()" [min]="minDate" [max]="maxDate" readonly />
       <mat-datepicker-toggle matSuffix [for]="end_date"></mat-datepicker-toggle>
       <mat-datepicker #end_date></mat-datepicker>
     </mat-form-field>
 
     Push To FF
-    <mat-slide-toggle style="margin-right: 20px" [formControl]="pushFF" name="push-to-ff"
+    <mat-slide-toggle id="toggle-push_to_ff" style="margin-right: 20px" [formControl]="pushFF" name="push-to-ff"
       (change)="selectChange($event)" [disabled]="form.value.is_ir_template === 1"></mat-slide-toggle>
 
     Verifikasi FF
-    <mat-slide-toggle style="margin-right: 20px" [formControl]="verifikasiFF" name="verifikasi-ff"
+    <mat-slide-toggle id="toggle-verifikasi_ff" style="margin-right: 20px" [formControl]="verifikasiFF" name="verifikasi-ff"
       (change)="selectChange($event)" [disabled]="form.value.is_ir_template === 1"></mat-slide-toggle>
 
     Verifikasi Manual
-    <mat-slide-toggle style="margin-right: 20px" [formControl]="verifikasi" name="verifikasi"
+    <mat-slide-toggle id="toggle-verifikasi_manual" style="margin-right: 20px" [formControl]="verifikasi" name="verifikasi"
       (change)="selectChange($event)" [disabled]="form.value.is_ir_template === 1"></mat-slide-toggle>
 
     <!--Verifikasi IR
@@ -61,12 +61,12 @@
     <br><br>
     <div *ngIf="form.value.pushFF === false">
       <mat-form-field style="width: 100%">
-        <input matInput type="text" (keypress)="numberOnly($event)" formControlName="coin_submission"
+        <input id="coin_submission" matInput type="text" (keypress)="numberOnly($event)" formControlName="coin_submission"
           placeholder="Coin Submission" />
       </mat-form-field>
 
       <mat-form-field style="width: 100%">
-        <input matInput type="text" (keypress)="numberOnly($event)" formControlName="coin_verification"
+        <input id="coin_verification" matInput type="text" (keypress)="numberOnly($event)" formControlName="coin_verification"
           placeholder="Coin Verification" />
       </mat-form-field>
     </div>
@@ -74,8 +74,8 @@
   </mat-dialog-content>
   <br><br>
   <mat-dialog-actions>
-    <button mat-raised-button color="success" type="submit">Simpan</button>
-    <button mat-raised-button color="warn" type="button" (click)="dialogRef.close()">Batal</button>
+    <button id="btn-submit-card-mission" mat-raised-button color="success" type="submit">Simpan</button>
+    <button id="btn-cancel-card-mission" mat-raised-button color="warn" type="button" (click)="dialogRef.close()">Batal</button>
   </mat-dialog-actions>
 
 </form>
