--- a/src/app/pages/dte/mission-builder/duplicate/mission-builder-duplicate.component.html
+++ b/src/app/pages/dte/mission-builder/duplicate/mission-builder-duplicate.component.html
@@ -207,7 +207,7 @@
           </mat-card>
         </div>
         <div fxFlex="10">
-          <button mat-raised-button type="button" class="confirmation-button" (click)="submit()">Simpan</button>
+          <button id="btn-simpan" mat-raised-button type="button" class="confirmation-button" (click)="submit()">Simpan</button>
         </div>
       </div>
     </div>
