--- a/src/app/pages/dte/mission-builder/duplicate/dialog-misi-duplicate/dialog-misi-duplicate.component.html
+++ b/src/app/pages/dte/mission-builder/duplicate/dialog-misi-duplicate/dialog-misi-duplicate.component.html
@@ -2,8 +2,19 @@
   <h2 class="">Pengaturan Misi</h2>
 
   <mat-dialog-content>
-    <div class="pt-8 pb-16">
+    <div class="pb-16" fxLayout="row" fxLayoutGap="24px" fxLayoutAlign="start center">
       <mat-checkbox [formControl]="status_pin_up" name="status_pin_up">Pin Up Misi</mat-checkbox>
+      <mat-checkbox [formControl]="non_coin_reward" name="non_coin_reward" (change)="selectChange($event)">
+        Reward Hadiah (Non Coin)
+      </mat-checkbox>
+      <div>
+        <mat-form-field style="width: 100%" *ngIf="form.value.non_coin_reward">
+          <input matInput type="text" maxlength="20" formControlName="reward_description" placeholder="Keterangan Reward" (change)="changeRewardDesc($event)" />
+        </mat-form-field>
+        <div class="mat-error" style="font-size: 14px; margin-top: -10px;" *ngIf="isRewardError">
+          Keterangan harus diisi
+        </div>
+      </div>
     </div>
 
     <mat-form-field style="width: 100%">
@@ -59,7 +70,7 @@
     <!--Verifikasi IR
     <mat-slide-toggle [formControl]="verifikasiIR" name="verifikasi-ir" (change)="selectChange($event)"></mat-slide-toggle>-->
     <br><br>
-    <div *ngIf="form.value.pushFF === false">
+    <div *ngIf="!form.value.non_coin_reward && form.value.pushFF === false">
       <mat-form-field style="width: 100%">
         <input matInput type="text" (keypress)="numberOnly($event)" formControlName="coin_submission"
           placeholder="Coin Submission" />
