--- a/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/detail/orderto-supplier-detail.component.html
@@ -236,9 +236,19 @@
                       </div>
                     </div>
                     <div style="text-align: right; font-size:18px">
+                      Voucher Belanja
+                      <span style="font-size: 18px; font-weight: 600;">Rp {{totalDiscount |
+                        rupiahFormaterWithoutRp}}</span>
+                    </div>
+                    <div style="text-align: right; font-size:18px">
+                      Total Nilai Pemesanan/Preorder
+                      <span style="font-size: 18px; font-weight: 600;">{{total -
+                        totalDiscount | rupiahFormaterWithoutRp}}</span>
+                    </div>
+                    <!-- <div style="text-align: right; font-size:18px">
                       Total Nilai Pemesanan/Preorder
                       <span style="font-size: 18px; font-weight: 600;">Rp {{total | rupiahFormaterWithoutRp}}</span>
-                    </div>
+                    </div> -->
                     <!-- <div class="pt-8 border-bottom-custom"></div> -->
                     <br>
                     <div class="text-center">
