--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -145,12 +145,12 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field fxFlex="16" class="is-light form-primary">
-            <mat-select placeholder="Pojok Bayar" [formControl]="pojok_bayar_validation">
+            <mat-select placeholder="Pojok Bayar Validation" [formControl]="pojok_bayar_validation">
               <mat-option *ngFor="let item of listPojokBayar" [value]="item.value">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
           <mat-form-field fxFlex="16" class="is-light form-primary">
-            <mat-select placeholder="Bank Account" [formControl]="bank_final_validation">
+            <mat-select placeholder="Bank Account Validation" [formControl]="bank_final_validation">
               <mat-option *ngFor="let item of listBankFinalValidation" [value]="item.value">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
