CDE-3881-private-label-voucher: - associated mitra (add body voucher_id)

--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -220,7 +220,7 @@
         </mat-tab>
         <mat-tab label="Panel Mitra" *ngIf="(isDetail || isEdit) && formDetilVoucher.get('opsiVoucher').value !== 'src-catalogue'">
           <app-panel-mitra-voucher (refreshDetail)="onRefreshDetail()" [statusVoucher]="detailVoucher.status"
-            [permissions]="permission">
+            [permissions]="permission" [voucherId]="detailVoucher.id">
           </app-panel-mitra-voucher>
         </mat-tab>
         <mat-tab label="Panel Retailer" *ngIf="(isDetail || isEdit) && formDetilVoucher.get('opsiVoucher').value !== 'private-label'">
