Verification Remark, Rejected Reason, IR Type

--- a/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
@@ -34,6 +34,11 @@
         <mat-tab label="Project">
           <app-project-list></app-project-list>
         </mat-tab>
+
+        <!-- Verification Remark -->
+        <mat-tab label="Verification Remark">
+          <app-verification-remark></app-verification-remark>
+        </mat-tab>
       </mat-tab-group>
     </div>
   </div>
