--- a/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-edit/dialog-edit.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/dialog-edit/dialog-edit.component.html
@@ -1,11 +1,11 @@
 <form [formGroup]="form" (ngSubmit)="submit(form)">
-  <h1 mat-dialog-title>Edit Internal Kategori</h1>
+  <h1 mat-dialog-title>Edit {{ data.title }}</h1>
   <mat-dialog-content>
     <mat-form-field style="width: 100%;">
       <input
         matInput
         formControlName="name"
-        placeholder="Nama Internal Kategori"
+        placeholder="Nama {{ data.title }}"
         value="{{name}}"
         required
       />
