--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -13,33 +13,44 @@
       <!-- <form [formGroup]="templateTaskForm" (keydown.enter)="$event.preventDefault();" fxLayout="column" fxLayout.gt-md="row" fxLayoutGap="48px"> -->
       <form class="form" name="form" [formGroup]="templateTaskForm" (keydown.enter)="$event.preventDefault();">
         <div class="form__content mat-elevation-z4 mb-24" fxLayout="column" fxLayoutAlign="start">
-          <div class="px-24 border-bottom" fxLayout="row wrap" fxLayoutAlign="space-between center"
-          style="margin-top: 5px;">
-
-          <div fxFlex class="p-16 h3">Pertanyaan</div>
-          <div fxFlex="80" fxLayoutAlign="flex-end flex-end">
-            <div fxFlex class="p-16 h3" style="margin-bottom: 10px;">
-              <mat-checkbox [formControl]="isIRTemplate" (change)="onChangeTemplateIR($event)"
-                [disabled]="this.frmQuiz.value === 'quiz'">Template IR
-              </mat-checkbox>
+          <div class="px-24 border-bottom" fxLayout="row wrap" fxLayoutAlign="space-between center" style="margin-top: 5px;">
+            <div fxFlex class="p-16 h3">Pertanyaan</div>
+            <div fxFlex="80" fxLayoutAlign="flex-end flex-end">
+              <div fxFlex class="p-16 h3" style="margin-bottom: 10px;">
+                <mat-checkbox [formControl]="isIRTemplate" (change)="onChangeTemplateIR($event)"
+                  [disabled]="this.frmQuiz.value === 'quiz'">Template IR
+                </mat-checkbox>
+              </div>
+              <div fxFlex class="p-16 h3" style="margin-bottom: 10px;">
+                <mat-checkbox [formControl]="shareable">Shareable Link</mat-checkbox>
+              </div>
+              <mat-form-field fxFlex="20" class="is-light form-primary" style="margin-right: 5px;">
+                <mat-select [formControl]="frmQuiz" placeholder="Quiz">
+                  <mat-option *ngFor="let item of listQuiz" [value]="item.value">{{item.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field fxFlex="50" class="is-light form-primary">
+                <mat-select [formControl]="frmIsBranching" placeholder="Reponse Type">
+                  <mat-option *ngFor="let item of listCategoryResponse" [value]="item.value">{{item.name}}</mat-option>
+                </mat-select>
+              </mat-form-field>
             </div>
-            <div fxFlex class="p-16 h3" style="margin-bottom: 10px;">
-              <mat-checkbox [formControl]="shareable">Shareable Link</mat-checkbox>
-            </div>
-            <mat-form-field fxFlex="20" class="is-light form-primary" style="margin-right: 5px;">
-              <mat-select [formControl]="frmQuiz" placeholder="Quiz">
-                <mat-option *ngFor="let item of listQuiz" [value]="item.value">{{item.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-            <mat-form-field fxFlex="50" class="is-light form-primary">
-              <mat-select [formControl]="frmIsBranching" placeholder="Reponse Type">
-                <mat-option *ngFor="let item of listCategoryResponse" [value]="item.value">{{item.name}}</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
           </div>
 
-          <div class="p-24">
+          <div class="pt-16 pr-24" fxLayout="column" fxLayoutAlign="start end" *ngIf="isIRTemplate.value">
+            <mat-form-field class="is-light form-primary" style="width: 25%;">
+              <mat-select formControlName="ir_type" placeholder="IR Type" (selectionChange)="isIRTypeError = false">
+                <mat-option *ngFor="let item of listIRType" [value]="item.value">
+                  {{item.name}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+            <div class="mat-error" role="alert" style="font-size: 12px; margin-top: -12px;" *ngIf="isIRTypeError">
+              Pilih salah satu IR Type
+            </div>
+          </div>
+
+          <div class="px-24 pb-24">
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
               <mat-form-field fxFlex="100" class="titleInput exportTextarea title-template" floatLabel="never">
                 <!-- <textarea matInput aria-label="Judul Tugas" (focus)="$event.target.select()" (change)="defaultValue($event, 'name', 'Judul Tugas')"
@@ -726,9 +737,17 @@
                 *ngFor="let item of templateTaskForm.get('rejected_reason_choices')['controls']; let k=index;">
                 <div [formGroupName]="k" class="question-list" fxLayout="row" fxLayoutAlign="start start"
                   fxFlex="1 0 auto">
-                  <mat-form-field fxFlex="50" class="question is-light secondary-text">
-                    <input matInput style="font-size: 13px;" formControlName="reason" (focus)="$event.target.select()"
-                      (change)="defaultValue($event, 'rejected_reason_choices', 'Alasan ', k)">
+                  <mat-form-field fxFlex="50" class="is-light form-primary">
+                    <mat-select formControlName="reason" [placeholder]="'Pilih Alasan '+ (k+1)" id="reason" #singleSelect>
+                      <ngx-mat-select-search [formControl]="filterReason" [placeholderLabel]="'Cari Alasan...'"
+                        [noEntriesFoundLabel]="'Tidak ada Alasan yang ditemukan'"></ngx-mat-select-search>
+                      <mat-option *ngFor="let item of filteredReason | async" [value]="item.name">
+                        {{item.name}}
+                      </mat-option>
+                    </mat-select>
+                    <mat-error>
+                      Pilih salah satu Alasan
+                    </mat-error>
                   </mat-form-field>
 
                   <button mat-icon-button fxFlex="5" *ngIf="templateTaskForm.get('rejected_reason_choices').length > 1"
