--- a/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.html
+++ b/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.html
@@ -66,19 +66,19 @@
     <form [formGroup]="formFilter" autoComplete="off">
       <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
         <mat-form-field fxFlex="30%" class="is-light form-primary">
-          <mat-select placeholder="National" formControlName="national">
+          <mat-select placeholder="{{ 'global.area.national' | translate }}" formControlName="national">
             <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxFlex="30%" class="is-light form-primary">
-          <mat-select placeholder="Zone" formControlName="zone" multiple>
+          <mat-select placeholder="{{ 'global.area.zone' | translate }}" formControlName="zone" multiple>
             <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name === 'all' ? 'Semua
               Zona' :
               item.code}}</mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field fxFlex="30%" class="is-light form-primary">
-          <mat-select placeholder="Regional" formControlName="region" multiple>
+          <mat-select placeholder="{{ 'global.area.regional' | translate }}" formControlName="region" multiple>
             <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name === 'all' ? 'Semua
               Regional' :
               item.code}}</mat-option>
@@ -108,17 +108,17 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Zona" prop="zone" [sortable]="false">
+        <ngx-datatable-column name="{{ 'global.area.zone' | translate }}" prop="zone" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.zone ? row.zone : '-'}}
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Regional" prop="region" [sortable]="false">
+        <ngx-datatable-column name="{{ 'global.area.regional' | translate }}" prop="region" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.regional ? row.regional : '-'}}
           </ng-template>
         </ngx-datatable-column>
-        <ngx-datatable-column name="Area" prop="area" [sortable]="false">
+        <ngx-datatable-column name="{{ 'global.area.area' | translate }}" prop="area" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.area ? row.area : '-'}}
           </ng-template>
