removing button export xls in order to supplier

--- a/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
@@ -61,10 +61,10 @@
                   <button mat-stroked-button style="width: 100px" color="primary" (click)="exportPO()">EXPORT
                     PO</button>
                 </div>
-                <div class="button-row">
+                <!-- <div class="button-row">
                   <button mat-stroked-button style="width: 110px" color="primary" (click)="exportXLS()">EXPORT
                     XLS</button>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
