--- a/src/app/pages/dte/audience/import/import-audience-dialog.component.html
+++ b/src/app/pages/dte/audience/import/import-audience-dialog.component.html
@@ -20,7 +20,7 @@
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar>
     <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
       accept=".xlsx, .xls" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
-      (fileChange)="preview($event)">
+      (fileChange)="onFileChange($event)">
       <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
         <mat-icon class="secondary-text s-48">attach_file</mat-icon>
         <br>
@@ -33,11 +33,19 @@
     <div class="">
       <!-- <small>Total Row Valid : {{rows ? validData : '-'}}</small> -->
     </div>
-    <div class="responsive">
+    
+    <div fxLayout="row" fxLayoutAlign="center center" *ngIf="requestingPreview">
+      <div fxFlex>
+        <span for="" style="font-weight: bolder;">Requesting Preview</span>
+        <mat-progress-spinner mode="indeterminate" diameter="32" style="margin:0 auto;"></mat-progress-spinner>
+      </div>
+    </div>
+
+    <div class="responsive" *ngIf="!requestingPreview">
       <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
         [offset]="offsetPagination" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
         [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total"
-        [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)">
+        [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="onPageChange($event)">
 
         <ngx-datatable-column name="Penjual" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-rowIndex="rowIndex">
@@ -163,7 +171,7 @@
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
         fxLayoutGap.lt-md="10px" fxFlex="1 0 auto">
         <button type="button" mat-raised-button color="primary" (click)="submit()"
-          [disabled]="rows.length === 0">Kirim</button>
+          [disabled]="rows.length === 0 || requestingPreview || importing || requestingImport">Kirim</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
           [disabled]="uploading">Batal</button>
       </div>
