order gsr checkbox

--- a/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.html
+++ b/src/app/pages/user-management/private-label/supplier-settings/edit/stock-edit.component.html
@@ -33,6 +33,7 @@
                         <mat-checkbox formControlName="value" [checked]="stock.value.value" class="pr-8 pt-8" *ngIf="stock.value.name == 'gsw_input_mandatory'">Mandatory GSW</mat-checkbox>
                         <mat-checkbox formControlName="value" [checked]="stock.value.value" class="pr-8 pt-8" *ngIf="stock.value.name == 'gsr_input'">Stock Input GSR</mat-checkbox>
                         <mat-checkbox formControlName="value" [checked]="stock.value.value" class="pr-8 pt-8" *ngIf="stock.value.name == 'gsr_input_mandatory'">Mandatory GSR</mat-checkbox>
+                        <mat-checkbox formControlName="value" [checked]="stock.value.value" class="pr-8 pt-8" *ngIf="stock.value.name == 'gsr_order'">Order GSR</mat-checkbox>
                     </div>
                   </div>
                 </div>
