FT#CDE-4043-Export-Button-Private-Label: - hide Order ke mitra hub if profile type supplier

--- a/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
+++ b/src/app/pages/user-management/private-label/orderto-supplier/index/orderto-supplier-index.component.html
@@ -130,7 +130,7 @@
             </ngx-datatable-column>
           </ngx-datatable>
         </mat-tab>
-        <mat-tab label="Order ke Mitra Hub">
+        <mat-tab label="Order ke Mitra Hub" *ngIf="!HIDE_FOR.includes(profileType)">
           <app-order-to-mitra-hub></app-order-to-mitra-hub>
         </mat-tab>
       </mat-tab-group>
